Media query css added, fixed btn overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   padding: 0;
 }
 body {
-  background-color: rgba(222, 215, 200, 0.27);
+  background-color: rgba(233, 226, 164, 0.27);
 }
 
 header {
@@ -34,12 +34,43 @@ main {
 
 h1 {
   visibility: hidden;
+  height: 10px;
+}
+
+.header-img {
+  position: relative;
+  width: 60rem;
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 40px;
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+header p {
+  max-width: 20em;
+  min-width: 10;
+  text-align: center;
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 1.22em;
+  margin-top: 10px;
+}
+
+.spacer {
+  display: inline-block;
+  height: 120px;
+  width: 100%;
+  position: relative;
 }
 
 .bottom-section {
-  position: absolute;
-  bottom: 5px;
-  z-index: 1;
+  position: relative;
   left: 0;
   right: 0;
   margin-left: auto;
@@ -47,7 +78,6 @@ h1 {
   width: 50%;
   bottom: 20px;
   text-align: center;
-  overflow: hidden;
 }
 
 #button {
@@ -77,57 +107,4 @@ h1 {
 
 .btn-menu:hover {
   background-color: rgba(112, 112, 112, 0.3);
-}
-
-.header-img {
-  position: absolute;
-  width: 22rem;
-  left: 0;
-  right: 0;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 40px;
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-header p {
-  max-width: 300px;
-  min-width: 200px;
-  text-align: center;
-  left: 0;
-  right: 0;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: ;
-}
-
-.nav-bar {
-  list-style: none;
-  border: 1px #f4f4f4;
-  border-radius: 10px;
-  padding: 0;
-  margin: 0;
-  overflow: auto;
-  background: #2e4053;
-  align-content: center;
-  position: sticky;
-  top: 0;
-  z-index: -1;
-}
-
-.nav-bar li {
-  float: left;
-}
-
-.nav-bar li a {
-  display: block;
-  color: #f4f4f4;
-  text-decoration: none;
-  padding: 15px 20px;
-}
-
-.nav-bar li a:hover {
-  background-color: #283747;
 }
